not responsive at all and the header needs to be fixed

--- a/project.css
+++ b/project.css
@@ -1,8 +1,13 @@
+body {
+  background-color: #99E6FF;
+}
 .project {
+  background-color: #fff;
   width: 700px;
   border: 5px solid #354A61;
   border-radius: 10px;
   margin: auto;
   margin-top: 50px;
-  padding: 50px 50px 50px 50px; 
+  padding: 50px 50px 50px 50px;
+
 }
