--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@ header {
   background-color: #354A61;
   padding-top: 20px;
   padding-bottom: 50px;
+  box-sizing: border-box;
 }
 .inline-elements {
   display: inline;
 }
 
 #head-sec {
-  background-color: #99E6FF;
+  background-color: #fff;
   height: 25vh;
   padding-left: 200px;
   padding-top: 20px;
@@ -122,7 +123,7 @@ header {
   display: block;
   width: 0;
   height: 2px;
-  background: #fff;
+  background: #000;
   transition: width .3s;
 }
 
@@ -142,4 +143,14 @@ header {
 }
 .nav-tabs {
   border-bottom: 0px;
+}
+
+
+@media (max-width: 575.98px) {
+
+  #head-sec {
+    padding-left: 10px;
+    padding-top: 10px;
+  }
+
 }
